# projet-pagila-flask-htmx

./: README.md  pyproject.toml
pagila-ui/: __init__.py  auth.py  db.py  inventory.py  utils.py
pagila-ui/sql/: pagila-alter.sql
pagila-ui/templates/: base.html  macro.html
pagila-ui/templates/auth/: login.html
pagila-ui/templates/inventory/: films.html  index.html
