[tool.poetry]
name = "pagila-ui"
version = "0.1.0"
description = ""
authors = ["Christopher Meier <christopher.meier@heig-vd.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
jinja2-fragments = "^1.2.1"
psycopg = "^3.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
